# gfsk8-modem-clean

./: .gitignore  CMakeLists.txt  README.md
include/: gfsk8modem.h
src/: DecodedText.cpp  DecodedText.h  FrequencyTracker.cpp  FrequencyTracker.h  JS8.cpp  JS8.h  JS8Submode.cpp  JS8Submode.h  JSC.cpp  JSC.h  Varicode.cpp  Varicode.h  api.cpp  commons.h  constants.h  crc12.h  fft_shim.h  fftw_compat.h  js8codec.cpp  js8codec.h  ldpc_feedback.h  log.h  soft_combiner.h  tracker.h  whitening.h  whitening_processor.h
tests/: test_decode_wav.cpp  test_encode.cpp  test_loopback.cpp  test_loopback_all.cpp
